<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">旺铺宝</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_certificate">CertificateActivity</string>
    <string name="title_activity_bind_bank_card">BindBankCardActivity</string>
    <string name="title_activity_config_home">ConfigHomeActivity</string>
    <string name="title_activity_system_config">SystemConfigActivity</string>
    <string name="title_activity_user_config">UserConfigActivity</string>
    <string name="title_activity_product_config">ProductConfigActivity</string>
    <string name="title_activity_trade_home">TradeHomeActivity</string>
    <string name="title_activity_pos_home">PosHomeActivity</string>
    <string name="title_activity_pos">PosActivity</string>
    <string name="title_activity_bill">BillActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activate">ActivateActivity</string>
    <string name="title_activity_bind_merchant">BindMerchantActivity</string>
    <string name="title_activity_customer_sign">CustomerSignActivity</string>
    <string name="title_activity_bankcard_order">BankcardOrderActivity</string>
    <string name="title_activity_bind_member">BindMemberActivity</string>
    <string name="title_activity_member_activate">MemberActivateActivity</string>
    <string name="title_activity_convenience">ConvenienceActivity</string>
    <string name="title_activity_air_ticket">AirTicketActivity</string>
    <string name="title_activity_railway_ticket">RailwayTicketActivity</string>
    <string name="title_activity_creditcard">CreditcardActivity</string>
    <string name="title_activity_creditcard_pay">CreditcardPayActivity</string>
    <string name="title_activity_transfer">TransferActivity</string>
    <string name="title_activity_phone_charge">PhoneChargeActivity</string>
    <string name="title_activity_balance_query">BalanceQueryActivity</string>
    <string name="title_activity_balance_result">BalanceResultActivity</string>
    <string name="title_activity_phone_chage_pay">PhoneChagePayActivity</string>
    <string name="title_activity_transfer_pay">TransferPayActivity</string>
    <string name="title_activity_air_line">AirLineActivity</string>
    <string name="title_activity_train_line">TrainLineActivity</string>
    <string name="title_activity_taobao_home">TaobaoHomeActivity</string>
    <string name="title_activity_goods_order">GoodsOrderActivity</string>
    <string name="title_activity_more_home">MoreHomeActivity</string>
    <string name="title_activity_train_ticket_order">TrainTicketOrderActivity</string>
    <string name="title_activity_air_ticket_order">AirTicketOrderActivity</string>
    <string name="title_activity_convenience_pay">ConveniencePayActivity</string>
    <string name="title_activity_loan">LoanActivity</string>
    <string name="title_activity_creditcard_apply">CreditcardApplyActivity</string>
    <string name="title_activity_account_home">AccountHomeActivity</string>
    <string name="title_activity_apply_content">ApplyContentActivity</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_security">SecurityActivity</string>
    <string name="title_activity_modify_password">ModifyPasswordActivity</string>
    <string name="title_activity_pay_shop_order">订货订单付款</string>
    <string name="bank_user_title">尊敬的%s您好:</string>

    <string-array name="shop_type">
        <item>餐饮类</item>
        <item>服装类</item>
        <item>服务类</item>
        <item>酒店类</item>
        <item>旅游类</item>
        <item>美容类</item>
        <item>配饰类</item>
    </string-array>
    <string-array name="picture_type">
        <item>相机</item>
        <item>相册</item>
    </string-array>

    <string name="user_info_name">收货人： %s</string>
    <string name="user_info_phone">联系电话： %s</string>
    <string name="user_info_adrees">收货地址： %s</string>
    <string name="product_quantity_all">共%s件商品，合计：</string>
    <string name="product_quantity_single">x %s</string>
    <string name="product_price">￥%s</string>
    <string name="title_activity_term_info">TermInfoActivity</string>
    <string name="user_agreement">\t\t\t\t\t\t\t\t\t\t\t\t重要须知：\n\n

\t\t本协议是您（自然人或单一实体）与杭州恩牛网络技术有限公司（以下简称“恩牛网络”之间关于“办卡神器”服务的法律协议。\n
\n
\t\t恩牛网络在此特别提醒，用户（您）欲使用“办卡神器”服务，必须事先认真阅读本服务条款中各条款，包括免除或者限制恩牛网络责任的免责条款及对用户的权利限制。请您审阅并接受或不接受本服务条款（未成年人审阅时应得到法定监护人的陪同）。如您不同意本服务条款及(或)恩牛网络随时对本服务条款的修改，您应不使用或应主动取消恩牛网络公司提供的服务。否则，您的任何对办卡神器服务中的相关服务的登录、下载、查看、存储、手动、自动转发等使用行为将被视为您对本服务条款全部的完全接受，包括接受恩牛网络对服务条款随时所做的任何修改。\n
\n
\t\t恩牛网络不时发布的关于办卡神器服务的各种规范、规则等也是本协议的一部分，您在使用本服务的同时即是对本协议、及各种规范、规则等所有条款的接收和遵守，以下简称服务条款或条款，这些服务条款可由恩牛网络随时更新，且毋须另行通知。服务条款一旦发生变更，恩牛网络将在网页上公布修改内容。修改后的服务条款一旦在网页上公布即有效代替原来的服务条款，不再另行通知。 您的登陆、使用视为默认同意条款的变更。\n
\n
\t\t如果您选择接受本条款，开通办卡神器服务成为办卡神器用户，即表示您同意接受协议各项条件的约束。如果您不同意本服务条款，则不能获得使用本服务的权利。您若违反本条款规定，恩牛网络公司有权随时中止或终止您“办卡神器”服务的使用资格并保留追究相关法律责任的权利。\n
\n
1．服务条款的确认和接受\n
\n
(1)、再次特别提醒您，在您使用前请确实仔细阅读本协议，如果您对本协议的任何条款和/或将来随时可能修改、补充的条款有异议，您可选择不成为恩牛网络公司所有的办卡神器软件的用户。当您点选“同意”按钮时即视为您已仔细阅读本条款，同意接受本协议条款的所有规范包括接受软件对本协议条款随时所做的任何修改，并愿受其拘束。\n
\n
(2)、恩牛网络公司有权在必要时修改本协议条款，服务条款一旦发生变动，将会在重要页面上提示修改内容。如果不同意所改动的内容，用户可以主动注销其用户账号。如果用户继续享用本网站所提供的网络服务，则视为接受服务条款的变动。恩牛网络公司保留在任何时候自行决定对办卡神器软件及其相关功能的变更、升级、修改、转移的权利。恩牛网络公司进一步保留在办卡神器软件开发新功能、新服务的权利和提供相应的服务，除非本网站另有说明，否则仍适用本协议。\n
\n
(3)、用户同意恩牛网络公司使用POP方式收取用户的账单邮件或使用WEB方式登陆邮箱设定转发规则并收取账单邮件。\n
\n
\n
2．服务简介\n
\n
\t\t办卡神器服务是恩牛网络公司运用网络存储服务系统，按照用户已同意的恩牛网络公司指定的服务条款，通过互联网络为用户提供远程数据存储的服务。\n
\n
\n
3．服务开通及终止\n
\n
\t\t（1） 用户接受恩牛网络公司指定的服务条款并完成相应的程序后，便成为办卡神器的合法用户。\n
\n
\t\t（2） 用户若有任何违反本协议或相关法规的规定，恩牛网络公司有权视用户的行为性质，在不事先通知用户的情况下，采取包括但不限于中断使用许可、限制使用、中止或终止办卡神器服务、追究法律责任等措施，若因此造成恩牛网络或他人损失的，用户应予赔偿。\n
\n
\n
4．关于用户资料及隐私保护\n
\n
\t\t恩牛网络公司重视对用户的隐私保护，用户向恩牛网络公司提供身份的资料后，可能不时收到恩牛网络公司的消息推送、电子邮件及直销邮件，内含推广产品或服务等资料。若用户不想收到此等资料，请致函恩牛网络公司客服中心。\n
\n
（1）恩牛网络公司保证不对外公开或向未达成合作的第三方提供用户注册资料及用户在使用网络服务时提交办卡神器的非公开内容，但下列情况除外： \n
\n
(a)事先获得用户的明确授权；\n
\n
(b)根据有关的法律法规要求；\n
\n
(c)按照相关政府主管部门的要求；\n
\n
(d)为维护社会公众的利益；\n
\n
(e)为维护本网站或用户的合法权益；\n
\n
(f)不可抗力所导致的用户信息公开；\n
\n
(g)不能归咎于本站的客观情势，所导致的个人资料的公开；\n
\n
(h)由于本网站的硬件和软件的能力限制，所导致用户信息的公开；\n
\n
(i)本网站有充分理由相信用户信息的公开，符合本站和用户利益要求的。\n
\n
（2）、在不透露单个用户信息的前提下，恩牛网络公司有权对整个用户数据库进行分析并对用户数据库进行利用。\n
\n
（3）、恩牛网络公司应在其网络系统内建立合理的安全体系，包括身份识别体系、内部安全防范体系，以使用户数据完整，并且保密。但用户了解并同意技术手段在不断更新，恩牛网络公司无法杜绝全部的非安全因素，但牛网络公司会及时更新体系，妥善维护网络及相关数据。\n
\n
\n
5．用户的帐号，密码和安全性\n
\n
\t\t用户应妥善保管邮箱帐号和密码，同时对帐号和密码安全承担完全责任。每个用户都要对其办卡神器中的所有内容负完全责任。用户若发现有自己的邮箱帐号被他人非法使用或存在安全漏洞的情况，应立即通知恩牛网络公司。\n
\n
\n
6．服务风险制度\n
\n
\t\t用户了解并确认办卡神器软件中可能包含由第三方提供的服务，恩牛网络公司只是为了用户的便利而提供功能模块，恩牛网络公司对第三方提供的服务不提供任何形式的保证，同时亦不对商业性的隐含担保，特定目的和不违反规定的适当担保作限制。包括：恩牛网络公司不担保服务一定能满足用户的要求，不担保服务不会中断，及对服务的及时性、安全性、出错或文件丢失的发生，不承担任何赔偿责任。使用办卡神器服务的用户自行承担全部风险。\n
\n
\n
7、服务变更、中断或终止 \n
\n
（1）、如因系统维护或升级的需要而需暂停网络服务恩牛网络公司将尽可能事先进行通告。\n
\n
（2）、恩牛网络公司有权判定您的行为是否符合恩牛网络公司有关要求，出现包括但不限于以下情形的，恩牛网络公司有权单方在不作通知的情况下终止对您提供的客户服务，由此产生的风险及责任由您自行承担。如造成恩牛网络公司损失的，您还应承担赔偿等责任：\n
\n
(a)用户提供的注册资料不真实；\n
\n
(b)用户违反本协议中规定的使用规则；\n
\n
(c)用户应按时足额向恩牛网络公司支付费用（前提如果需要支付费用）；\n
\n
(d)用户违反本协议其它规定，且自恩牛网络公司通知其纠正之日起10个工作日内仍未纠正的。 \n
\n
（3）、本协议的终止，意味您在恩牛网络公司下属办卡神器服务的即时终止。即时起，恩牛网络公司将不保留您客户信息及对应服务。\n
\n
（4）、本协议的终止并不能当然的被认为免除用户在本协议生效期间应履行的相关付款义务；并不意味着终止前所发生的未完成客户指令的撤销，也不能消除因终止前的交易所带来的法律后果。\n
\n
（5）、恩牛网络公司保留在不事先通知用户的情况下随时中断或终止部分或全部网络服务的权利，对于所有服务的中断或终止而造成的任何损失，恩牛网络公司无需对用户或任何第三方承担任何责任。\n
\n
\n
8、知识产权\n
\n
（1）、恩牛网络公司对办卡神器软件拥有的著作权、商标权、商业秘密以及其他相关的知识产权，包括但不限于各种文档资料、软件、商标、FLASH、设计、图案、音像、摄影、动画、美术等。其它本协议中未经提及的权利亦由恩牛网络公司保留。\n
\n
（2）、未经恩牛网络公司事先书面同意，用户不得为任何营利性或非营利性的目的自行实施、利用、转让或许可任何第三方实施、利用、转让上述知识产权。\n
\n
\n
9、免责声明\n
\n
（1）、恩牛网络公司不就通信系统或互联网的中断或无法运作、技术故障、计算机错误或病毒、信息损坏或丢失或其它在公司合理控制范围之外的原因而而产生的其他任何性质的破坏而向用户或任何第三方承担赔偿责任。\n
\n
（2）、鉴于目前的技术条件恩牛网络公司不保证用户在使用本网站时在操作上不会中断或没有错误，不保证会纠正本网站所有缺陷，亦不保证本网站能满足用户的所有要求。\n
\n
（3）、恩牛网络公司不担保其所提供的网络服务一定能满足用户的要求，也不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。\n
\n
（4）、用户明确同意其使用恩牛网络公司51信用卡软件所存在的风险将完全由其自己承担；因其使用本服务而产生的一切后果也由其自己承担，恩牛网络公司不对用户不承担任何责任。\n
\n
（5）、用户在此同意恩牛网络公司在任何情况下都无需向用户或任何第三方在使用办卡神器时对其在传输或联络中的延迟、不准确、错误或疏漏及因此而致使的损害负责。\n
\n
（6）、在所适用的法律允许的范围内，任何一方均无须就数据的丢失和/或损坏及任何间接的、附带的、特殊的、后果性的损失向另一方负责赔偿（包括但不限于损失的利润、业务的中断、商业信息的丢失、商誉损失或其它经济损失）。\n
\n
（7）、双方承认本条款反映了双方就协商谈判达成的一致意见。双方均完全了解本条款的后果并进一步承认本条款的合理性。\n
\n
（8）、如注册用户对本协议下所有涉及条款的理解发生争议的，恩牛网络公司有权解释相关条款。\n
\n
（9）如恩牛网络公司的系统发生故障影响到本服务的正常运行，恩牛网络公司承诺在第一时间内与相关单位配合，及时处理进行修复。但用户因此而产生的经济损失，恩牛网络公司不承担责任。此外，恩牛网络保留不经事先通知为维修保养、升级或其他目的暂停本服务任何部分的权利。\n
\n
　\n
\n
10．适用法律\n
\n
\t\t本服务条款的解释，效力及纠纷的解决，适用于中华人民共和国大陆地区法律、法规。若用户和恩牛网络之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户在此完全同意将纠纷或争议提交恩牛网络所在地杭州市西湖区人民法院管辖。\n
\n
\n
11．其他\n
\n
　\t\t用户对服务之任何部分或本服务条款的任何部分之意见及建议可通过客户服务部门与恩牛网络联系（完）\n
\n
\n
\n
\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t恩牛网络公司</string>

</resources>
