<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="100dp"
    android:layout_marginRight="100dp"
    android:background="@drawable/full_min_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_alignParentTop="true"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back_image_selector" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/divide_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200dp"
            android:gravity="center"
            android:text="确认订单"
            android:textColor="@color/text_normal_color"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/order_cart"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp">
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/user_info_name"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            android:text="@string/user_info_phone"
            android:textSize="30sp" />
       <ImageView
           android:id="@+id/iv_address"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@id/tv_user_name"
           android:src="@drawable/icon_address" />
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_name"
            android:layout_toRightOf="@id/iv_address"
            android:text="@string/user_info_adrees"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:background="@drawable/order_pay_selector"
            android:text="支付"
            android:textSize="30sp"
            android:textColor="@color/orange"/>

        <ExpandableListView
            android:padding="0dp"
            android:id="@+id/listData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_address"
            android:layout_above="@id/btn_pay"
            >
        </ExpandableListView>
    </RelativeLayout>
</LinearLayout>